<resources>
    <string name="app_name">quizUp</string>
    <string name="posts_list_description">List of posts</string>
    <string name="post_content_description">Post content</string>

    <!--  Buttons  -->
    <string name="back_btn">Back_btn</string>

    <!--  login/Registration text  -->
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>

    <!--  login/Registration input  -->
    <string name="name_input">Enter a Username</string>
    <string name="name_email_input">Enter Username or email</string>
    <string name="email_input">Enter email</string>
    <string name="password_input">Enter a password</string>
    <string name="con_password_input">Re-enter password</string>
    <string name="forget_password">Forget password?</string>

    <!--  login/Registration button  -->
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="guest_btn">Lets_go</string>

</resources>