<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue">

    <EditText
        android:id="@+id/email_box"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/name_email_input"
        android:inputType="text"
        android:textSize="21sp"
        android:background="@drawable/text_view_border"
        app:layout_constraintBottom_toTopOf="@+id/password_box"
        app:layout_constraintEnd_toEndOf="@+id/password_box"
        app:layout_constraintStart_toStartOf="@+id/password_box" />

    <EditText
        android:id="@+id/password_box"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:textSize="21sp"
        android:background="@drawable/text_view_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_btn"
        android:textSize="24sp"
        android:backgroundTint="#8731DB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="50dp"
        android:contentDescription="Back to Guest login page"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="@+id/email_box"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_compass" />

</androidx.constraintlayout.widget.ConstraintLayout>