<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue">

    <TextView
        android:id="@+id/sign_up_h"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="CRATE YOUR ACCOUNT"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/username_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_box"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_view_border"
        android:hint="@string/name_input"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email_box"
        app:layout_constraintEnd_toEndOf="@+id/create_password_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/create_password_box" />

    <EditText
        android:id="@+id/email_box"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_view_border"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/create_password_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/create_password_box"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:background="@drawable/text_view_border"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/confirm_password_box"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_view_border"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/create_password_box"
        app:layout_constraintStart_toStartOf="@+id/create_password_box"
        app:layout_constraintTop_toBottomOf="@+id/create_password_box" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#8731DB"
        android:text="@string/register_btn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_box" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Back to Guest login page"
        app:layout_constraintStart_toStartOf="@+id/email_box"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_compass" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? " />

        <TextView
            android:id="@+id/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/link_blue"
            android:textStyle="italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>